chore: fix table overflow

--- a/docs/site/layout/layout.css
+++ b/docs/site/layout/layout.css
@@ -1631,6 +1631,7 @@
     width: 100%;
     font-size: var(--font-size--1);
     margin-block: var(--space-xs-r2);
+    overflow: hidden;
   }
 
   .markdown table thead {
